[package]
name = "slog2-extra"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A crate that wraps methods defined in `libslog2-extra` in an idomatic rust interface. Also exposes all unsafe c ffi functions via a `ffi` module."
repository = "https://github.com/mounten/slog2"

[dependencies]
bitflags = "2.9.4"
libc = "0.2.175"
